// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/UserAvatar Custom Size 1`] = `
<span
  className="inline-block align-middle rounded-full border border-gray-50"
  role="img"
  style={
    Object {
      "height": 49,
      "width": 49,
    }
  }
>
  <img
    alt="Avatar of Dennis"
    height={48}
    src="https://source.boringavatars.com/pixel/48/Dennis?colors=F9FCFD,0000C2,0000C2,0000C2,100C53,46ECA1,46ECA1,46ECA1,8330FF,8330FF,8330FF,F2F3F8,E7EAF2,CFD0DC,B4B4C7,9695AE,787696,636188,4A4878,332F66,1E1A5A"
    width={48}
  />
</span>
`;

exports[`Storyshots UI Elements/UserAvatar Default User Avatar 1`] = `
<span
  className="inline-block align-middle rounded-full border border-gray-50"
  role="img"
  style={
    Object {
      "height": 25,
      "width": 25,
    }
  }
>
  <img
    alt="Avatar of ffthornton"
    height={24}
    src="https://source.boringavatars.com/pixel/24/ffthornton?colors=F9FCFD,0000C2,0000C2,0000C2,100C53,46ECA1,46ECA1,46ECA1,8330FF,8330FF,8330FF,F2F3F8,E7EAF2,CFD0DC,B4B4C7,9695AE,787696,636188,4A4878,332F66,1E1A5A"
    width={24}
  />
</span>
`;

exports[`Storyshots UI Elements/UserAvatar With Custom Class Name 1`] = `
<span
  className="animate-spin inline-block align-middle rounded-full border border-gray-50"
  role="img"
  style={
    Object {
      "height": 25,
      "width": 25,
    }
  }
>
  <img
    alt="Avatar of Fabian"
    height={24}
    src="https://source.boringavatars.com/pixel/24/Fabian?colors=F9FCFD,0000C2,0000C2,0000C2,100C53,46ECA1,46ECA1,46ECA1,8330FF,8330FF,8330FF,F2F3F8,E7EAF2,CFD0DC,B4B4C7,9695AE,787696,636188,4A4878,332F66,1E1A5A"
    width={24}
  />
</span>
`;
